# mcp-document

./: Cargo.toml  README.md  mcp-server.toml
docs/: api-reference.md  backends.md
src/: client.rs  google.rs  lib.rs  main.rs  microsoft.rs  notion.rs  server.rs
